#37 make fields required in api

--- a/resources/api/kio-api.yaml
+++ b/resources/api/kio-api.yaml
@@ -572,6 +572,9 @@ definitions:
       - team_id
       - active
       - name
+      - scm_url
+      - documentation_url
+      - specification_url
 
   StoreApplicationCriticality:
     type: object
